--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,6 +26,7 @@
            <div class="flash <%= key %>"><%= value %></div>
            <% end %>
         </div>
+      <% render 'layouts/navigation' %>
     <%= yield %>
   </body>
 </html>
