--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -9,7 +9,7 @@
         <span class="icon-bar"></span>
       </button>
       <%= link_to 'news-app', root_path, class: 'navbar-brand' %>
-    </div>
+    </div>x
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
