json showing on index

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,2 +1,22 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
+
+
+//header {
+//  position: relative;
+//  width: 100%;
+//  height: calc(100vh - 151px); //footer = 100, topmenu = 50
+//  max-width: 100%;
+//  min-height: auto;
+//  text-align: center;
+//  color: #fff;
+//  background-image: url(image-path('header.jpg'));
+//  background-position: center;
+//  -webkit-background-size: cover;
+//  -moz-background-size: cover;
+//  background-size: cover;
+//  -o-background-size: cover;
+//  overflow-wrap: break-word;
+//  word-wrap: break-word;
+//
+//}
