--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,8 +12,9 @@
 
   <header>
       <% if signed_in? %>
-            Signed in as: <%= current_user.email %>
-            <%= button_to 'Sign out', sign_out_path, method: :delete %>
+      <%= render "layouts/navigation" %>
+      Signed in as: <%= current_user.email %>
+      <%= button_to 'Sign out', sign_out_path, method: :delete %>
           <% else %>
             <%= link_to 'Sign in', sign_in_path %>
           <% end %>
@@ -29,4 +30,7 @@
       <% render 'layouts/navigation' %>
     <%= yield %>
   </body>
+<footer>
+  <%= render "layouts/footer" %>
+</footer>
 </html>
