headlines on index

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,6 +1,9 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
+#newsfeed {
+  background-color: #CCCCCC;
+}
 
 //header {
 //  position: relative;
