--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,8 +3,36 @@
 
 #newsfeed {
   background-color: #CCCCCC;
+  text-decoration: none;
 }
 
+
+.theheadlines {
+  text-decoration: none;
+  width: 350px;
+  height: 50px;
+  border: solid whitesmoke 1px;
+  //border-radius: 4px;
+  //padding: 5px;
+  //box-shadow: 5px 10px #888888;
+
+}
+
+
+.listings {
+  text-decoration: none;
+  background: #e6f2ff;
+  border-radius: 5px;
+  color: whitesmoke;
+  padding: 3px 8px;
+}
+
+.listings :hover {
+  color: darkslategrey;
+
+
+
+}
 //header {
 //  position: relative;
 //  width: 100%;
