--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,23 +1,24 @@
 
 <h1>Wahoo! News</h1>
+
 <div class="row">
-   <div class="col-md-8">
+   <div class="col-md-10">
+     <% @headlines["articles"].each do |headline| %>
+       <div class="panel panel-info">
+         <div class="panel-heading">
+           <h3 class="panel-title">
+             <div class="theheadlines"><p class="listings"><a href="<%= headline["url"] %>"><%= headline["title"] %></a></p></div>
+           </h3>
+         </div>
+         <div class="panel-body">
+           <p><%= headline["description"] %></p>
+         </div>
+       </div>
+     <% end %>
    </div>
 </div>
-  <h3>Recent Headlines</h3></div>
-      <% @headlines["articles"].each do |headline| %>
-        <div class="panel panel-default">
-          <div class=""panel="heading">
-            <h3 class="panel-title">
-              <div class="theheadlines"><p class="listings"><a href="<%= headline["url"] %>"><%= headline["title"] %></a></p></div>
-            </h3>
-          </div>
-          <div class="panel-body">
-            <p><%= headline["description"] %></p>
-          </div>
-          </div>
-        </div>
-<% end %>
+
+
 
 
 
