--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,10 +1,10 @@
-<nav class="navbar navbar-default">
+<nav class="navbar navbar-light" style="background-color: #e3f2fd;">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" href="#">News-App</a>
+      <a class="navbar-brand" href="#">Wahoo! News</a>
     </div>
     <ul class="nav navbar-nav">
-      <li class="active"><a href="/">Home</a></li>
+      <li class="active"><a href="../">Home</a></li>
       <li><a href="/comments/new">Discussion</a></li>
       <li><a href="#">Page 2</a></li>
       <li><a href="#">Page 3</a></li>
