discussion comments section showing

--- a/app/views/comments/index.html.erb
+++ b/app/views/comments/index.html.erb
@@ -1,1 +1,7 @@
-<h2>Comments Section</h2>
+<h2>Wahoo! News Comments & Discussion</h2>
+
+<% @comments.each do |comment| %>
+
+<p><% comments.message %></p>
+<br>
+<% end %>
