--- a/app/assets/stylesheets/comments.scss
+++ b/app/assets/stylesheets/comments.scss
@@ -1,3 +1,37 @@
 // Place all the styles related to the Comments controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+
+//button styling generated via: http://css3buttongenerator.com/
+.formbutton {
+  background: #34d94d;
+  background-image: -webkit-linear-gradient(top, #34d94d, #2bb890);
+  background-image: -moz-linear-gradient(top, #34d94d, #2bb890);
+  background-image: -ms-linear-gradient(top, #34d94d, #2bb890);
+  background-image: -o-linear-gradient(top, #34d94d, #2bb890);
+  background-image: linear-gradient(to bottom, #34d94d, #2bb890);
+  -webkit-border-radius: 18;
+  -moz-border-radius: 18;
+  border-radius: 18px;
+  font-family: Arial;
+  color: #ffffff;
+  font-size: 13px;
+  padding: 10px 20px 10px 20px;
+  text-decoration: none;
+}
+
+.formbutton:hover {
+  background: #3cb0fd;
+  text-decoration: none;
+}
+
+//Discussion Page Header
+
+.discusshead {
+  position: relative;
+  float: left;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
