--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,5 +1,20 @@
-<%= simple_form_for @comment do |f| %>
-  <%= f.input :title, label: "Topic:" %>
-  <%= f.input :message, label: "Message:" %>
+<!--<form>-->
+  <!--<fieldset>-->
+    <!--<legend>Start the Discussion:</legend>-->
+<!--<p>Topic:</p>-->
+    <!--<input type="text" name="usrname" maxlength="10">-->
+  <!--<p>Message:</p><textarea rows="5" cols="50" name="comment">-->
+<!--Enter message here...</textarea>-->
+    <!--<input type="submit" value="Submit">-->
+  <!--</fieldset>-->
+<!--</form>-->
+
+
+<%= simple_form_for(@comment, html: { novalidate: true }) do |f| %>
+    <%= f.input :message,
+              size: 500,
+              maxlength: 1050,
+              label: "Message:" %>
   <%= f.submit :Submit %>
 <% end %>
+
