--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -5,10 +5,8 @@
     </div>
     <ul class="nav navbar-nav">
       <li class="active"><a href="../">Home</a></li>
-      <li><a href="/comments/new">Discussion</a></li>
-      <li><a href="#">Page 2</a></li>
-      <li><a href="#">Page 3</a></li>
-
+      <li><a href="/comments/new">Join the Discussion</a></li>
+      <li><a href="/comments/index">Read Discussion Comments</a></li>
     </ul>
   </div>
 </nav>
